fixed spacing/verbage

--- a/org_inv/static/css/index.css
+++ b/org_inv/static/css/index.css
@@ -21,7 +21,7 @@ body:before {
   text-align: center;
   font-size: 500%;
   font-weight: 500;
-  color:#13442b;
+  color:black;
   text-shadow: 2px 2px #EEE;
   margin-top: 5%;
 }
@@ -46,6 +46,7 @@ body:before {
   font-size: 60%;
   font-weight: 300;
   text-shadow: 2px 2px #13442b;
+  line-height: 150%;
 }
 
 .signup{
@@ -66,7 +67,7 @@ button{
   font-family: 'Cinzel Decorative', serif, sans-serif;}
 
 button:hover {
-  background: rgba(0,0,0,0);
+  background: #EEE;
 	color: #13442b;
 	box-shadow: inset 0 0 0 3px #13442b;
   cursor: pointer;
